Fixed #14 iOS Chrome layout bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -282,9 +282,9 @@ md-progress-linear .md-container .md-bar1, md-progress-linear .md-container .md-
  ********************************
  */
 #scorebar img {
-	width: 80px;
-	height: 80px;
-	border-radius: 80px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
 }
 
 #scorebar img.turn-indicator {
